--- a/app/assets/stylesheets/invitations.css.scss
+++ b/app/assets/stylesheets/invitations.css.scss
@@ -37,3 +37,27 @@
   }    
 }
 
+header.invitations {
+  nav.top-bar {
+    background: url(image_path('menu_module_invitations.png')) repeat-x;
+    .menu_wrapper, .down_arrow_wrapper {
+      ul.top-bar-menu {
+        li {
+          &.active { background: url(image_path('selected_down_invitations.png')) no-repeat center center; }
+        }
+        select {
+          background-color: #feaab6;
+        }
+
+      }
+    }
+  }
+}
+
+footer._invitations {
+  .drawer {
+    background-color: #feaab6;
+  }
+  
+}
+
