--- a/app/views/layouts/activities.html.haml
+++ b/app/views/layouts/activities.html.haml
@@ -153,7 +153,7 @@
             $('#sticky_blue_box .title_box').css('display', 'block');
           });
           $('.blurb').css('height', $('.blurb').prev('.title_box').css('height'));
-    = render partial: 'layouts/footer'
+    = render partial: 'layouts/footer', locals: {append: ''}
 
                      
     :javascript
