--- a/app/assets/stylesheets/field_notes.css.scss
+++ b/app/assets/stylesheets/field_notes.css.scss
@@ -26,7 +26,7 @@ header.field_notes  {
     .menu_wrapper, .down_arrow_wrapper {
       ul.top-bar-menu {
         select {
-          background-color: #DCC8FA;
+//          background-color: #DCC8FA;
         }
       }
     }
@@ -77,7 +77,7 @@ nav.top-bar {
 }
 footer._fn {
   .drawer {
-    background-color: #dcc8fa;
+//    background-color: #dcc8fa;
   }
 }
 #sticky_field_notes_box {
