--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -77,7 +77,7 @@
                       %option{selected: (controller.controller_name == 'activities'  ? :selected : false), value: activities_path } Programme
                       
                 %ul.top-bar-menu.hide-for-small-only
-                  %li
+                  %li.select_menu
                     %select.main_nav_select
                       %option{selected: :selected, value: 'www'} Home
                       %option{value: 'fieldnotes'} Field_Notes
