--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -29,7 +29,24 @@
     line-height: 1.4rem;
     color: #222;
     font-weight: 300;
-
+    h1 {
+      font-size: 2.0rem;
+    }
+    h2 {
+      font-size: 1.85rem;
+    }
+    h3 {
+      font-size: 1.7rem;
+    }
+    h4 {
+      font-size: 1.55rem;
+    }
+    h5 {
+      font-size: 1.4rem;
+    }
+    h6 {
+      font-size: 1.25rem;
+    }
   }
   .body p {
     max-width: 100%;
