--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,9 +5,9 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = display_meta_tags :site => 'HMs backoffice'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
-    = stylesheet_link_tag    'backoffice', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'backoffice', media: 'all', 'data-turbolinks-track' => false
     = javascript_include_tag 'application', 'data-turbolinks-track' => true 
-    = javascript_include_tag 'backoffice', 'data-turbolinks-track' => true 
+    = javascript_include_tag 'backoffice', 'data-turbolinks-track' => false 
     - if controller.controller_name == 'partners'
       %script{:src => "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key}", :type => "text/javascript"}
     = csrf_meta_tags 
