--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -32,7 +32,7 @@
           
     .row
       .small-12.medium-8.columns.medium-offset-2
-        .body= raw sanitize(@post.body.gsub(/\&nbsp;/, ' '), tags: %w{bold b img h1 h2 h3 h4 h5 h6 ul li ol strong a u p br iframe underline i italic em}, attributes: %w{target src href})
+        .body= raw sanitize(@post.body.gsub(/\&nbsp;/, ' '), tags: %w{bold b img h1 h2 h3 h4 h5 h6 ul li ol strong a u p br iframe underline i italic em}, attributes: %w{target width frameborder scrolling height  src href})
     .row
       .small-12.medium-3.columns.small-centered
         - unless @post.previous.nil?
