--- a/app/assets/stylesheets/field_notes.css.scss
+++ b/app/assets/stylesheets/field_notes.css.scss
@@ -26,7 +26,7 @@ header.field_notes  {
     .menu_wrapper, .down_arrow_wrapper {
       ul.top-bar-menu {
         select {
-//          background-color: #DCC8FA;
+          background-color: #d7d5da;
         }
       }
     }
@@ -76,8 +76,14 @@ nav.top-bar {
   }
 }
 footer._fn {
+  .arrow {
+    .down_arrow {
+      margin-top: -1px;
+    }
+  }
   .drawer {
-//    background-color: #dcc8fa;
+    background-color: #d7d5da;
+
   }
 }
 #sticky_field_notes_box {
