--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -112,7 +112,13 @@ header {
     height: 75px;
     .down_arrow_wrapper {
       ul.top-bar-menu {
+        .together {
+          &.active {
+            background: url(image_path('selected_down.png')) no-repeat center center; 
+          }
+        }
         li {
+
           &.active { background: url(image_path('selected_down.png')) no-repeat center center; }
         }
       }
@@ -153,8 +159,14 @@ header {
       left: calc(26% - 110px);
       padding-top: 4px;
       margin: 0;
+      li.about {
+        text-align: right;
+        padding-right: 0.2rem;
+      }
       li.select_menu {
         margin-top: -8px;
+        margin-left: 0;
+        padding: 0 0.2rem;
       }
       select {
         margin: 0; padding: 0 1.2rem 0 0;
@@ -165,7 +177,7 @@ header {
         outline: none;
         height: 25px;
         -webkit-appearance:none;
-        font-weight: bold;
+        font-weight: normal;
         border: none;
         &:active, &:focus, &:hover {
           outline: none;
@@ -178,6 +190,20 @@ header {
     height: 0;
     z-index: 20;
     position: absolute;
+    ul.top-bar-menu {
+      li.about {
+        text-align: right;
+        padding-right: 0.2rem;
+      }
+      li.select_menu {
+        margin-top: -8px;
+        margin-left: 0;
+        padding: 0 1.4rem 0 0.2rem;
+      }
+      .together {
+        float: left;
+      }
+    }
     .select_spacer {
       padding: 0 2.8rem 0 1.4rem;
     }
