--- a/app/views/layouts/invitations.html.haml
+++ b/app/views/layouts/invitations.html.haml
@@ -76,12 +76,13 @@
                       %option{selected: (controller.controller_name == 'events' ? :selected : false), value: events_path} Events
                       %option{selected: (controller.controller_name == 'postcategories' && params[:id] == 'speculations'  ? :selected : false), value: "/category/speculations"} Speculations              
                 %ul.top-bar-menu.hide-for-small-only
+                  %li.about{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about-invitations')
                   %li.select_menu
                     %select.main_nav_select
-                      %option{value: 'www'} Home
+                      %option{value: 'www'} HYBRID_MATTERs
                       %option{value: 'fieldnotes'} Field_Notes
                       %option{selected: :selected, value: 'invitations'} Invitations
-                  %li{class: controller.controller_name == 'pages' ? :active : false}= link_to 'About', page_path('about-invitations')
+                  
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   %li{class: controller.controller_name == 'events' ? :active : false}= link_to 'Events', events_path
                   %li{class: controller.controller_name == 'postcategories' && params[:id] == 'speculations' ? :active : false}= link_to 'Speculations', "/category/speculations"
@@ -90,11 +91,12 @@
               .social &nbsp;
               .rest
                 %ul.top-bar-menu
-                  %li.select_spacer 
-                    %span
-                      %strong Field_Notes
-                  %li{class: controller.controller_name == 'pages' ? :active : false}
-                    %span About
+                  .together{class: controller.controller_name == 'pages' ? :active : false}
+                    %li.about
+                      %span About
+                    %li.select_menu
+                      %span
+                        %strong HYBRID_MATTERs
                   %li{class: controller.controller_name == 'posts' ? :active : false}
                     %span Blog
                   %li{class: controller.controller_name == 'events' ? :active : false}
