--- a/app/assets/stylesheets/invitations.css.scss
+++ b/app/assets/stylesheets/invitations.css.scss
@@ -66,3 +66,13 @@ footer._invitations {
   
 }
 
+@media only screen and (max-width: 40em)  { 
+  
+  header.invitations {
+    nav.top-bar {
+      select {
+        background-color: #f7d5ae;
+      }
+    }
+  }
+}
