--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -26,8 +26,12 @@
         = image_tag('eu.png')
         = image_tag('cw.png')
         = image_tag('op.png')
+        = image_tag('umu_logotyper.jpg')
+        %br/
         = image_tag('austrian.jpg')
         = image_tag('artsiceland.png')
+        = image_tag('taike_vaaka_v2.png')
+        
   .row.contact_info
     .row
       .small-12.columns.text-center
