--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,7 @@
  *= require posts
  *= require field_notes
  *= require fn_mobile
+ *= require exhibitions
  *= require jquery-ui
  *= require jquery-overrides
  *= require mobile
