--- a/app/views/admin/pages/index.html.haml
+++ b/app/views/admin/pages/index.html.haml
@@ -1,6 +1,11 @@
 .row
   .small-12.columns
-    %h1 Listing pages
+    %h2 Listing pages
+.row
+  .small-12.columns
+
+    = link_to 'New Page', new_admin_page_path, class: [:button, :small]
+    
 .row
   .small-12.columns
     %table
