--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -10,6 +10,8 @@
     .small-12.large-8.columns= f.input :name, input_html: {:required => ''}
   .row
     .small-12.large-8.columns= f.input :activitytype, input_html: {:required => ''}
+  .row
+    .small-12.large-8.columns= f.input :place_slug, label: 'Slug for exhibition URL'
 
   .row
     .small-12.columns= f.input :description, as: :text, input_html: {class: :ckeditor}
