--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -2,9 +2,41 @@
   .row
     .medium-8.small-centered.columns.medium-offset-2
       %h2= @page.title
-  - if @page.image?
+  - if @page.image? && @page.all_images.size == 1
     .row
       .medium-8.small-centered.columns.medium-offset-2= image_tag @page.image.url
+
+  - unless @page.all_images.empty?
+    .row
+      .small-12.medium-8.columns.medium-offset-2
+
+        .image_carousel{style: @page.all_images.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+          - if @page.image?
+            .slide[@page]
+              = image_tag @page.image.url(:standard)
+              .thumb= image_tag @page.image.url(:thumb)
+          - @page.all_images.each_with_index do |photo, index|
+            .slide[photo]
+              = image_tag photo.image.url(:standard)
+              .thumb= image_tag photo.image.url(:thumb)    
+
+    = content_for :jquery do
+      :plain
+        $('.image_carousel').slick({infinite: true,
+          arrows: true,
+          slide: '.slide',
+          adaptiveHeight: false,
+
+          dots: true,
+          customPaging: function(slick,index) {
+             return slick.$slides.eq(index).find('.thumb').html() ;
+          },
+          variableWidth: false,
+          autoplay: true,
+          autoplaySpeed: 2400,
+          slidesToScroll: 1,
+        });
+                  
   .row
     .medium-8.small-centered.columns.medium-offset-2.body
       = raw @page.body
