--- a/app/views/layouts/_dropdown.html.haml
+++ b/app/views/layouts/_dropdown.html.haml
@@ -7,8 +7,8 @@
     %option{value: 'nikolaj', class: :exhibition_select, selected: (request.url =~ /\/nikolaj/  ? :selected : false)} -- Nikolai Kunsthal
     %option{value: 'forumbox', class: :exhibition_select, selected: (request.url =~ /\/forumbox/  ? :selected : false)} -- Forum Box
     %optgroup{label: 'Research' }
-      %option{value: 'invitations'} Invitations
-      %option{value: 'fieldnotes'} Field_Notes
-      %option{value: 'investigations'} Investigations
+      %option{value: 'invitations'} Invitations (MU)
+      %option{value: 'fieldnotes'} Field_Notes (FSB)
+      %option{value: 'investigations'} Investigations (ITU)
 
     
