--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -460,3 +460,6 @@ select optgroup, option.bi {
   font-style: italic;
   font-weight: bold;;
 }
+option.exhibition_select {
+  padding-left: 1.2rem;
+}
